tests/NormalTests/paczka1/fuzzy1/87031644.err
Error in line 14: oufWRleB5n A61 13,1
Error in line 18: 3iEBR S191 60,0
Error in line 32: 3iEBR S403 57,4
Error in line 35: 8FHrzr1ywXv S265 24,8
Error in line 36: 8FHrzr1ywXv S403 70,0
